theme/assets/styles/pages/_frontpage.scss
.homepagescreen {

  h1 a,h2{
    color:#fff;
  }
  h1 {
    font-size: 125px;
    max-height: 250px;
    color: #fff;
    text-transform: uppercase;
  }

  h2{
    font-size: 3em;
    margin-bottom: 20px;
  }
  #sentencerotate span, .subpage-title {
    font-size: 26px;
    font-weight:bold;
    max-height: 200px;
    color:#fff;
  }
  .nd_header__brand {
    filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.5));
    font-size: 98px;
    max-height: 250px;

  }
  .banner-homepage {
    padding: 2em 0;
    text-shadow: 0 3px 4px rgba(0, 0, 0, 0.5);
    color:#fff;
    background-size: cover, cover !important;
    background-position: center center;
    background-repeat: no-repeat;
    background:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/hero_nice_2000.jpg);
  }

}


#socialhome {
  .page-header {
    border: 0 !important;
  }
}

#global .btn a{
  color: #fff;
}
#manifesto,
#participate,
#rassemblements {
  .page-header {
    border: 0 !important;
  }
  .wrapper {
    .container-fluid {
      background: #fff;
      padding: 30px 45px;
    }
  }
  iframe{
    border:none;
  }
  img.pull-left {
    padding-right: 20px;
    padding-bottom: 20px;
  }

  button a {
   color:#fff;
  }
}

#homepage-map {
  position: relative;
  .homepage-map__button {
    position: absolute;
    top: 10px;
    right: 10px;
    z-index: 1;
  }
}

iframe {
  border:none;
}
.iframe-module{
  iframe{
    width:100%;
  }
}

.page-template-page-ville {
  h1:first-letter {
    box-shadow:
      0 3px 0 -1px $light-blue, /* to indent the green bottom line with the same color as the background */
      0 3px 0 0 $light-blue,  /* to create a bottom 3px high green line */
      inset 0 -1px 0 0 $light-blue; /* to create the top (1px) of the outline */
    border: 0 !important;
  }
  .page-header {
    border: 0 !important;
  }
}

.scroll {
  max-height: 600px;
  overflow: auto;
  border: 1px solid #eee;
  padding: 1em;
}

.participate-action {
  @include make-row;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 10px;
  margin-bottom: 10px;

  .participate-action__image {
    @extend .col-md-6;

    @media (max-width: $screen-sm-max) {
      display: none;
    }
  }
  .participate-action__content {
    @extend .col-md-6;
  }
}

.action-title {
  color: $light-blue;
  font-size: 18px;
  font-weight: bold;
}

.news-container {

  h3 {
    font-family: Roboto;
  }

  .news-tile {
    border: 1px solid #ddd;
    background-color: #fff;
    margin-bottom: 15px;
    @include box-shadow(1px, 1px, 10px, #ddd);
    img {
      width: 100%;
      height: auto;
    }
    .news-tile__caption {
      padding: 15px;
      > a {
        color: #111;
        &:hover,
        &:active {
          text-decoration: none;
          color: lighten(#111, 33.333%);
        }
      }
    }
  }

  .news-headlines {

    @include flexbox;
    margin: 15px 0;

    > div {

      min-height: 360px;
      text-align: center;
      @include box-shadow(1px, 1px, 10px, #ddd);

      border: 1px solid #ddd;
      padding: 15px;

      background-repeat: no-repeat;
      background-size: cover;
      background-position: center center;

      @include flexbox;
      @include align-items(center);

      > a {
        width: 100%;
        h2 {
          font-family: Roboto;
          color: #fff;
          text-shadow: 0 3px 4px rgba(0,0,0,.5);
        }
      }
    }
    .news-headlines__first {
      width: 66.666%;
      margin-right: 15px;
    }
    .news-headlines__second {
      width: 33.333%;
    }
  }

  /* Salvattore styles */

  div[data-columns]::before {
    content: '4 .column.size-1of4';
  }

  @media screen and (max-width: 480px){
    div[data-columns]::before {
      content: '1 .column.size-1of1';
    }
  }

  @media screen and (min-width: 481px) and (max-width: 768px) {
    div[data-columns]::before {
      content: '2 .column.size-1of2';
    }
  }

  div[data-columns] {
    > div {
      padding-right: 15px;
    }
    > div:last-child {
      padding-right: 0;
    }
  }

  .column {
    float: left;
  }
  .size-1of4 {
    width: 25%;
  }
  .size-1of3 {
    width: 33.333%;
  }
  .size-1of2 {
    width: 50%;
  }
  .size-1of1 {
    width: 100%;
  }

}

.homepage-media {
  @extend .row;
  @include flexbox;
  @include justify-content(space-between);
  > * {
    @include flex-grow(1);
    text-align: center;
    border: 1px solid #ddd;
    img {
      vertical-align: middle;
      margin: 10px;
      width: 50px;
      height: 50px;
    }
    span {
      vertical-align: middle;
      font-family: AmaticSC;
      color: #111;
      font-size: 36px;
    }
  }
}

.video-section {
  padding: 50px 0;
  .live {
  transition : all 0.3s ease;
  vertical-align: top;
  opacity: 1;
  width: 100%;
  height: 100%;
  padding-bottom: 30px;
  overflow: hidden;
    .vjs-paused.vjs-has-started .vjs-big-play-button {
    display: block;
    }
    #tvdebout {
    transition : all 0.3s ease;
    width: 100%;
    height: 100%;
    padding-top: 50%;
      .vjs-big-play-button {
      width: 100%;
      height: 48px;
      line-height: 48px;
      font-size: 3.5em;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
      margin: auto;
      border: 0;
      border-radius: 0;
        .vjs-status {
        display: inline-block;
        vertical-align: middle;
        font-family: CommuneB1San31;
        font-size: 1.25em;
        margin-top: 15%;
        white-space: nowrap;
          &:before {
          display: inline-block;
          vertical-align: middle;
          content: "";
          margin-right: 0.125em;
          border-radius: 0.5em;
          height: 0.5em;
          width: 0.5em;
          background: red;
          animation: live 2s ease-in-out infinite;
            @keyframes "live" {
              0% {
              background: rgba(255, 0, 0, 1);
              }
              50% {
              background: rgba(255,100,100,1);
              }
            }
          }
        }
      }
    }
  }
  .hide-live {
  opacity: 0;
  padding: 0px;
  display: none;
    #tvdebout {
    padding-top: 0%;
    }
  }
  .video-section__title {
    display: table;
    width: 100%;
    padding-bottom: 20px;
    a, h1 {
      display: table-cell;
      vertical-align: middle;
    }
    h1 {
      width: 80%;
      font-size: 48px;
      font-family: CommuneB1San31;
      text-transform: uppercase;
      letter-spacing: 1px;
    }
  }
}

